[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms1isotopes"
version = "0.6.0"
description = "Extract and evaluate MS1 isotope distributions from LC-MS/MS proteomics data"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Frédérique Vilenne", email = "frederique.vilenne@uhasselt.be"},
]
keywords = [
    "mass spectrometry", "proteomics", "isotope distribution",
    "spectral angle", "BRAIN", "benchmark",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "numba>=0.56",
    "pyteomics>=4.5",
    "lxml>=4.9",
    "brain-isotopic-distribution>=1.5",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
ms1isotopes = "ms1isotopes.cli:main"

[project.urls]
Repository = "https://github.com/VilenneFrederique/ms1isotopes"
Issues = "https://github.com/VilenneFrederique/ms1isotopes/issues"

[tool.setuptools.packages.find]
include = ["ms1isotopes*"]
